<resources>
    <string name="app_name">HDA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="drugs">Drugs</string>
    <string name="facilities">Facilities</string>
    <string name="hw">Hws</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign inRegister</string>
    <string name="btn_register">Register an account</string>
    <string name="title_activity_drug_details">Drug Details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_facility">Facility Details</string>
    <string name="dosage_uses">Dosage &amp; uses</string>
    <string name="interactions">interactions</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae ipsum nec orci rutrum pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia </string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae ipsum nec orci rutrum pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed tristique nec ipsum ac consequat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam nec cursus augue, vel semper lorem. Quisque facilisis maximus nunc, at fermentum risus laoreet ac. Praesent id scelerisque libero. Nam efficitur elit velit. Mauris mattis lectus et ligula aliquam, ac lacinia dui consectetur. Fusce nulla purus, posuere et turpis quis, efficitur dapibus lorem.</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="adverse_effects">Adverse effects</string>
    <string name="drug_class">Drug class</string>
    <string name="drug_company">Drug company</string>
    <string name="generic_name">Generic name</string>
    <string name="pharmacology">Pharmacology</string>
    <string name="share">Share</string>
    <string name="drug">Drug</string>
    <string name="batch_not_found">Batch number not found</string>
    <string name="batch_found">Batch number found</string>
    <string name="verify">Verify</string>
    <string name="dont_use">Expired! Do not use!</string>
    <string name="possible_reason">Possible Reasons</string>
    <string name="warning">Warning: Unregistered Drugs may be Harmful to your Health.</string>
    <string name="expired">This medicine is expired. It may be harmful to Your Health </string>
    <string name="safe">Medicine is Safe for Use</string>
    <string name="not_safe">Medicine is Not Safe for Use</string>
    <string name="un_registered">This medicine is not registered. \n Make sure you read the digits carefully or please consult a doctor</string>
    <string name="registered">This medicine is registered</string>
    <string name="call_center">Call center</string>
    <string name="not_found_reason">1. Typing error – read the number carefully or type again. \n
        2. Misreading – ask for help. \n
        3. Batch Number not registered – consult your pharmacist for Help.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string name="health_workers">H/Workers</string>
    <string name="about">About</string>
    <string name="registration">Registration</string>
    <string name="item_image">item_image</string>
    <string name="help_facilities">The button connects you to a form where members of the public can communicate back to regulatory authorities about the quality of services being received in a given facility, complaints against a facility and its workers and activities of benefit or risk within a facility. The information helps the authorities to do appropriate followup and inspection which and the authority may chose whether to involve the sender of the information. but irrespective of the choice made, the sender will be protected and information will be handled confidentially to protect the community where the health facility is rendering its facilities.</string>
    <string name="feedback_form">feedback form</string>
</resources>