<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scriptfloor.hda.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.mancj.materialsearchbar.MaterialSearchBar
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_search_bar"
            android:paddingLeft="@dimen/padding_search_bar_left"

            android:paddingRight="@dimen/padding_search_bar"
            android:paddingStart="@dimen/padding_search_bar_start"
            android:paddingTop="@dimen/padding_search_bar"
            app:mt_hint=" Search Drugs"
            app:mt_menuIconDrawable="@drawable/ic_menu_vector"


            app:mt_navIconEnabled="true"
            app:mt_placeholder="@string/app_name"
            app:mt_searchBarColor="#fff"
            app:mt_speechMode="false"
            app:theme="@style/AppTheme.PopupOverlay" />


        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drugs" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facilities" />



        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />


</android.support.design.widget.CoordinatorLayout>
