<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/help_facility"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/bgContent"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/layout2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <ImageView
                            android:id="@+id/itemImage2"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/item_image"
                            android:tint="@color/bgTitleRight"
                            app:srcCompat="@drawable/ic_forum" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/bgTitleRight"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/title_from_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="marquee"
                            android:fadingEdge="horizontal"
                            android:singleLine="true"
                            android:text="Feedback about Facilities"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/title_to_address"
                            style="@style/TitleBadgeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fadingEdge="horizontal"
                            android:lines="2"
                            android:text="@string/help_facilities"
                            android:textColor="@color/grey_500"
                            android:textSize="12sp" />


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:tint="@color/grey_500"
                        app:srcCompat="@drawable/ic_unfold_more" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/more_help_facility"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/help_facilities" />

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btn_feedback_facility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_form" />

            <android.support.v7.widget.CardView
                android:id="@+id/help_hw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/bgContent"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/layout1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <ImageView
                            android:id="@+id/itemImage"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/item_image"
                            android:tint="@color/bgTitleRight"
                            app:srcCompat="@drawable/ic_forum" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/bgTitleRight"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/title_from_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="marquee"
                            android:fadingEdge="horizontal"
                            android:singleLine="true"
                            android:text="Feedback about Facilities"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/title_to_address"
                            style="@style/TitleBadgeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fadingEdge="horizontal"
                            android:lines="2"
                            android:text="@string/help_facilities"
                            android:textColor="@color/grey_500"
                            android:textSize="12sp" />


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:tint="@color/grey_500"
                        app:srcCompat="@drawable/ic_unfold_more" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/more_help_hw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/help_facilities" />

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btn_feedback_hw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_form" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>